force-app/main/default/objects/Answer__c/fields/NextQuestion__c.field-meta.xml
<CustomField>
    <fullName>NextQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Answers (NextQuestion)</relationshipLabel>
    <relationshipName>ParentAnswers</relationshipName>
    <type>Lookup</type>
</CustomField>