force-app/main/default/objects/Answer__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution</label>
    <referenceTo>Solution</referenceTo>
    <relationshipLabel>Answers</relationshipLabel>
    <relationshipName>Answers</relationshipName>
    <type>Lookup</type>
</CustomField>